# toy_backtest

./: .gitignore  Cargo.toml  rustfmt.toml
backtest/: Cargo.toml
backtest/src/: backtest.rs  lib.rs
common/: Cargo.toml
common/src/: commponent.rs  event.rs  idgenerator.rs  lib.rs  order.rs  quote.rs  tick.rs  time.rs
dataclient/: Cargo.toml
dataclient/src/: dataclient.rs  lib.rs
msgbus/: Cargo.toml
msgbus/src/: lib.rs  msgbus.rs
src/: main.rs
src/backtest_engine/: backengine.rs  message.rs  mod.rs  tick.rs  transaction.rs
strategy/: Cargo.toml
strategy/src/: excutor.rs  lib.rs  order_factory.rs  single_generator.rs  strategy.rs  strategyconfig.rs
ui/: Cargo.toml
