[workspace]
resolver = "2"
members=[
	"dataclient",
	"backtest",
	"strategy",
	"ui",
	"common", 
	"msgbus", 
]

[workspace.package]
rust-version = "1.81.0"
version="1.0.0"
edition = "2021"
authors = ["violetsakura-7"]


[workspace.dependencies]
tokio = {version = "1.40.0", features = ["full"]}
chrono = "0.4.38"
lazy_static = "1.5.0"
serde = {version = "1.0.210" , features = ["derive"]}
ustr = "1.0.0"